--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="exercise-styles/exercise.9g.css" defer />
     <title>Car dealership</title>
-    <link rel="stylesheet" href="exercise-styles/exercise.9g.css" />
   </head>
   <body>
     <p class="company-name">Lewis and son's car dealership</p>
